--- a/index.html
+++ b/index.html
@@ -188,6 +188,6 @@
             })
         }
     </script>
-    <script src="install.js"></script>
+    <!-- <script src="install.js"></script> -->
 </body>
 </html>
