--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             line-height: 1.8;
             margin-bottom: 15px;
             color: #354052;
+            font-size: 16px;
         }   
         section {
             border-bottom: 1px solid #ddd;
